@@ -71,7 +71,7 @@ IF(NOT DEFINED _MANAGE_SOURCE_VERSION_CONTROL_CMAKE_)
 	    DEPENDS ${_MANAGE_SOURCE_VERSION_CONTROL_TAG_FILE}
 	    )
 
-	ADD_DEPENDENCIES(tag force_commit)
+	#	ADD_DEPENDENCIES(tag force_commit)
 
 	ADD_CUSTOM_COMMAND(OUTPUT ${_MANAGE_SOURCE_VERSION_CONTROL_TAG_FILE}
 	    COMMAND git tag -a -m "${CHANGE_SUMMARY}" "${PRJ_VER}" HEAD
