@@ -1,6 +1,25 @@
 cmake_minimum_required(VERSION 2.6)
 SET(CMAKE_INSTALL_PREFIX "/usr" CACHE PATH "Install path prefix")
 ####################################################################
+# Recommended policy setting
+#
+CMAKE_POLICY(VERSION 2.6)
+# CMP0005: Preprocessor definition values are now escaped automatically.
+# OLD:Preprocessor definition values are not escaped.
+CMAKE_POLICY(SET CMP0005 OLD)
+
+# CMP0009: FILE GLOB_RECURSE calls should not follow symlinks by default.
+# OLD: FILE GLOB_RECURSE calls follow symlinks
+CMAKE_POLICY(SET CMP0009 NEW)
+
+IF(NOT ${CMAKE_VERSION} VERSION_LESS 2.8.4)
+    # CMP0017: Prefer files from the CMake module directory when including from there.
+    # OLD: Prefer files from CMAKE_MODULE_PATH regardless
+    CMAKE_POLICY(SET CMP0017 OLD)
+ENDIF(NOT ${CMAKE_VERSION} VERSION_LESS 2.8.4)
+
+
+####################################################################
 # Project specific information
 #
 PROJECT(<PRJ_NAME>)
@@ -15,14 +34,12 @@ SET(MAINTAINER "<PRJ_MAINTAINER>")
 SET(VENDOR "<PRJ_VENDOR>")
 SET(LICENSE "<PRJ_LICENSE>")
 
+
+
 ####################################################################
 # Includes
 #
 SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/Modules ${CMAKE_ROOT}/Modules )
-
-IF(CMAKE_VERSION)
-    CMAKE_POLICY(SET CMP0005 OLD)
-ENDIF(CMAKE_VERSION)
 
 INCLUDE(ManageVariable RESULT_VARIABLE MANAGE_VARIABLE_PATH)
 IF(MANAGE_VARIABLE_PATH STREQUAL "NOTFOUND")
