@@ -5,3 +5,4 @@ REDHAT_BUGZILLA=
 [Changes]
 - Renamed MANAGE_VARIABLE with MANAGE_VARIABLE_PATH,
   because it is what the variable actually store.
+- Move the cmake policies to the front
